--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "/"
 languageCode = "en-us"
-title = "Hugo Hero Theme"
+title = "Bitakle Org"
 themesDir = "themes"
 theme = "hugo-hero-theme"
 
